Revision history for Bytes::Random::Secure

0.24 2012-02-12
  - Added a small explanation of Test::Warn optional dependency to the
    DEPENDENCIES section of the POD.  Most of the explanation is in the
    INSTALLATION section.

0.23 2012-02-11
  - Clarified the (small) magnitude of the performance issues surrounding
    random_string_from() (MODULO BIAS section of POD). (DANAJ's suggestion.)
  - Added a test for _closest_divisor().
  - Added a POD section discussing ISAAC's strengths.
  - Increased SEED_MAX bits from 512 (arbitrary) to 8192 (theoretical
    max for ISAAC).  Added explanation to POD, and adjusted tests.
  - Minor corrections in # code comments (accuracy).
  - Added irand() object method per Dana Jacobsen's request and
    code contribution.
  - POD and tests for irand().
  - Test::Warn is now an optional dependency.  By ensuring that Test::Warn is
    installed, the module has 100% test coverage (per Devel::Cover).

0.22 2013-01-29
  - Implement suggestions from Dana Jacobsen (Unicode tests, specify minimum 
    versions for dependencies, document installation on older Perls).
  - POD correction -- Removed reference to config_seed.
  - POD: Added INSTALLATION section to address issues with older Perls.
  - POD: Clarified "CAVEATS" with discussion of Unicode support in pre-5.8.9.
  - Added t/23-string_from_unicode.t to test Unicode on Perl 5.8.9+.
  - Added a Unicode example to examples/random_from.pl.
  - Set a CONFIGURE_REQUIRES to pull in a recent ExtUtils::MakeMaker.
  - Set minimum versions on some Core modules from which we're using newer
    features, or which behaved badly in old 5.6.x-contemporary versions.
    
0.21 2013-01-24
  - All functions and methods will now throw an exception if the byte-count
    parameter is passed something that doesn't look like an integer >= 0.
  - examples/*.pl updated to demonstrate new features.
  - Remove silly check for "bag" strings longer than 2**32.