@@ -44,5 +44,5 @@
    },
    "release_status" : "stable",
    "resources" : {},
-   "version" : "0.23"
+   "version" : "0.24"
 }
