@@ -49,41 +49,6 @@ foreach my $want ( qw/ 0 1 2 3 4 5 6 7 8 16 17 1024 10000 / ) {
 }
 
 
-# This test only runs for random_bytes().  No need to run it for
-# random_bytes_lite(); they share the same code.
-
-my @counts;
-my $iterations = 500;  
-for( 1 .. $iterations ) {
-    my( $count, $low, $high, $range_err ) = ( 0, 0, 0, 0 );
-    while( $low < 10 || $high < 10 ) {
-      my $byte = ord random_bytes( 1 );
-      $byte == 0 && $low++;
-      $byte == 255 && $high++;
-      $byte < 0 || $byte > 255 && $range_err++;
-      $count++;
-    }
-    ok( $low,  "random_bytes produces $low bytes of '0'."   );
-    ok( $high, "random_bytes produces $high bytes of '255'." );
-    ok( !$range_err, "random_bytes produced $range_err values out of 0 .. 255.");
-    push @counts, $count;
-}
-
-my $total_count;
-$total_count += $_ for @counts;
-my $avg_count = $total_count / scalar @counts;
-
-# Allow for a 10% deviation from average after 500 passes.
-# Testing of 500 test-suite runs shows that the deviation should never be more
-# than about 4%, but we don't need tests failing unless things are really wonky.
-ok( ( $avg_count > 2711 && $avg_count < 3313 ),
-    "$avg_count average iterations to reach five '0' bytes and five '255' " .
-    'bytes. Within reasonable range (expected approx 3012)'
-);
-diag "Average iterations: $avg_count (expect approx 3012).";
-
-
-
 # random_bytes_hex (and _lite) tests.
 
 foreach my $want ( qw/ 0 1 2 3 4 5 6 7 8 16 17 1024 10000 / ) {
